--- a/examples/Demo/apps/approve/templates/ApproveView/list.html
+++ b/examples/Demo/apps/approve/templates/ApproveView/list.html
@@ -1,9 +1,7 @@
 {{extend "approve_layout.html"}}
 
-{{block content_container}}
-<div class="toolbar">
+{{block content_tool}}
     <a href="/approve/add" class="btn btn-primary">创建评审单</a>
-</div>
 {{end}}
 
 {{block content_main}}
