--- a/examples/Demo/apps/approve/templates/ApproveView/view.html
+++ b/examples/Demo/apps/approve/templates/ApproveView/view.html
@@ -12,6 +12,43 @@
     <div class="box">
         <h2>工作流信息</h2>
         <div class="box-body">
-            工作流状态: {{=state}}
+            <b>工作流状态:</b> {{=state}}
+            <br/>
+            {{if task_desc:}} 
+                <b>当前活动:</b> {{=task_desc}}
+            {{pass}}
         </div>
+    </div>
+    
+    {{if show_deliver_form:}}
+    <div class="box">
+        <h2>流转</h2>
+        <div class="box-body">
+
+            <form id="deliver_form">
+                {{<<deliverform.build.body}}
+                {{<<deliverform.build.buttons_line}}
+            </form>
+        </div>
+    </div>
+    <script>
+    $(function(){
+        $('#deliver_form').submit(function(){return false;});
+        $('#btnDeliver').click(function(e){
+            e.preventDefault();
+            var data = $('#deliver_form').serialize();
+            $.post('/approve/deliver/{{=obj.id}}', data).success(function(r){
+                if(r.success){
+                    window.location.reload();
+                } else {
+                    alert(r.message)
+                }
+            });
+        });
+    });
+    </script>
+
+
+    {{pass}}
+
 {{end}}
