--- a/redbreast/moniter/templates/MoniterView/workflow.html
+++ b/redbreast/moniter/templates/MoniterView/workflow.html
@@ -12,6 +12,7 @@
             {{embed detailview}}
         </div>
     </div>
-    {{include "inc_tasks.html"}}
+    {{include "inc_workflow_tasks.html"}}
+    {{include "inc_workflow_trans.html"}}
 
 {{end}}
