add param for controlling trans list

--- a/redbreast/ui/templates/inc_workflow_trans.html
+++ b/redbreast/ui/templates/inc_workflow_trans.html
@@ -4,6 +4,6 @@
 <div class="box">
     <h2>流转信息</h2>
     <div class="box-body">
-        {{<<WorkflowUIUtils.print_workflow_trans(workflow, layout_class=WFTransBoxLayout)}}
+        {{<<WorkflowUIUtils.print_workflow_trans(workflow, layout_class=WFTransBoxLayout, layout_class_kwargs={'show_null_message': False})}}
     </div>
 </div>
